--- a/culture.html
+++ b/culture.html
@@ -12,7 +12,7 @@
 
   <section class="Header-culture">
     <nav>
-      <a href="homepage.html"><img src="/SRC/logo.jpg" alt="blank"></a>
+      <a href="homepage.html"><img src="/SRC/logo.jpg" alt=""></a>
       <div class="nav-links-culture"  id="navLinks-culture">
         <i class="fas fa-xmark" onclick="hideMenu()"></i>
         <ul>
